<resources>
    <string name="app_name">TrackNote</string>
    <string name="SignUp">Sign Up</string>
    <string name="Registration">Registration</string>
    <string name="SingIn">Sing In</string>
    <string name="WelcomeTo">Welcome to</string>
    <string name="LastName">LastName</string>
    <string name="FullName">FullName</string>
    <string name="Password">Password</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="CreateNewAccount">Create a new account</string>
    <string name="Login">Login</string>
    <string name="ForgotPassword">Forgot Password?</string>
    <string name="DontHaveAccount">Don`t have account?</string>
    <string name="AlreadyHaveAccount">Already have an account?</string>
    <string name="ResetPassword">Reset Password</string>
    <string name="ResetButton">Reset</string>
    <string name="NewPassword">New Password</string>
    <string name="Send">Send</string>
    <string name="title_activity_maps">Map</string>
    <string name="Email">Email</string>
    <string name="Welcome">Welcome</string>
    <string name="Others">Others</string>
    <string name="Settings">Settings</string>
    <string name="StartingLocation">Start Location</string>
    <string name="FinalLocation">Final Location</string>
    <string name="Add">ADD</string>
    <string name="TrackRegister">Track Registration</string>
    <string name="StartDate">Start Date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>